# cryptocrush-depricated

./: .gitignore  README.md  pyproject.toml
cryptocrush/: README.md  manage.py
cryptocrush/src/cryptocrush/api/: main.py
cryptocrush/src/cryptocrush/core/: asgi.py
src/: runserver.py
src/cryptocrush/core/: settings.py  urls.py
src/cryptocrush/static/css/: landing.css
src/cryptocrush/static/script/: landing.js
src/cryptocrush/templates/: index.html  index.html.bku
